--- a/balloontutorial/build.gradle
+++ b/balloontutorial/build.gradle
@@ -5,8 +5,6 @@ apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 27
 
-
-
     defaultConfig {
         minSdkVersion 20
         targetSdkVersion 27
@@ -23,15 +21,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 publish {
-    userOrg = 'gupuru'
-    groupId = 'jp.studio.edamame.balloontutorial'
+    userOrg = 'nabesuke'
+    groupId = 'jp.studio.edamame'
     artifactId = 'balloontutorial'
-    publishVersion = '1.0.0'
+    publishVersion = '0.1.0'
     desc = 'tutolial'
     website = 'https://github.com/nabesuke0/BalloonTutorial'
+    repoName = 'edamame'
+}
+
+tasks.withType(Javadoc).all {
+    enabled = false
 }
 
 dependencies {
@@ -41,7 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
 
